added first PyTorch Neural Network Model for classification task

--- a/fundamentals/pytorch_basics/01_tensors_and_autograd.ipynb
+++ b/fundamentals/pytorch_basics/01_tensors_and_autograd.ipynb
@@ -2,12 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim"
    ]
   },
   {
@@ -46,21 +49,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vector (force components): tensor([1., 2., 3.])\n"
+      "Vector (force components): tensor([1., 2., 3.])\n",
+      "vector multiplication: tensor(14.)\n",
+      "Taking Power tensor([1., 4., 9.])\n",
+      "Reshaping the vector tensor([[1.],\n",
+      "        [2.],\n",
+      "        [3.]])\n"
      ]
     }
    ],
    "source": [
     "# Vector (rank-1 tensor) - like force or velocity\n",
     "vector = torch.tensor([1.0, 2.0, 3.0])\n",
-    "print(\"Vector (force components):\", vector)"
+    "print(\"Vector (force components):\", vector)\n",
+    "print(\"vector multiplication:\", vector @ vector) \n",
+    "print(\"Taking Power\", vector.pow(2))\n",
+    "print(\"Reshaping the vector\", vector.view(3,1))\n"
    ]
   },
   {
@@ -195,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -245,6 +256,239 @@
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2 Creating a Simple Neural Network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Check if MPS (Metal Performance Shaders) is available\n",
+    "def check_mps_available():\n",
+    "    if not torch.backends.mps.is_available():\n",
+    "        if not torch.backends.mps.is_built():\n",
+    "            print(\"MPS not available because PyTorch was not built with MPS enabled\")\n",
+    "        else:\n",
+    "            print(\"MPS not available because the current MacOS version is not 12.3+ \"\n",
+    "                  \"and/or you do not have an MPS-enabled device\")\n",
+    "        return False\n",
+    "    return True\n",
+    "\n",
+    "# 2. Get the appropriate device\n",
+    "def get_device():\n",
+    "    if check_mps_available():\n",
+    "        device = torch.device(\"mps\")\n",
+    "        print(\"Using MPS (Apple Silicon GPU)\")\n",
+    "    else:\n",
+    "        device = torch.device(\"cpu\")\n",
+    "        print(\"Using CPU\")\n",
+    "    return device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SimpleNN(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(SimpleNN, self).__init__()\n",
+    "        self.layer1 = nn.Linear(2, 5)    # 2 features and 5 hidden neurons\n",
+    "        self.relu = nn.ReLU()            # activation function\n",
+    "        self.layer2 = nn.Linear(5, 1)    # Output layer: 5 -> 1\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.layer1(x)\n",
+    "        x = self.relu(x)\n",
+    "        x = self.layer2(x)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SimpleNN(\n",
+      "  (layer1): Linear(in_features=2, out_features=5, bias=True)\n",
+      "  (relu): ReLU()\n",
+      "  (layer2): Linear(in_features=5, out_features=1, bias=True)\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2.1 Training Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(42)\n",
+    "X = np.random.randn(100,2) # 100 samples and 2 features\n",
+    "y = (X[:,0] + X[:, 1] > 0).astype(np.float32) # simple classification rule\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# converting them into tensors\n",
+    "\n",
+    "X_tensor = torch.FloatTensor(X)\n",
+    "y_tensor = torch.FloatTensor(y).view(-1,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define optimizer and loss functions\n",
+    "criterion = nn.BCEWithLogitsLoss() # Binary cross entropy loss\n",
+    "optimizer = optim.SGD(model.parameters(), lr=0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training the Model ....\n",
+      "Epoch [20/100], Loss: 0.6399\n",
+      "Epoch [40/100], Loss: 0.6273\n",
+      "Epoch [60/100], Loss: 0.6144\n",
+      "Epoch [80/100], Loss: 0.6014\n",
+      "Epoch [100/100], Loss: 0.5882\n",
+      "Epoch [120/100], Loss: 0.5747\n",
+      "Epoch [140/100], Loss: 0.5610\n",
+      "Epoch [160/100], Loss: 0.5468\n",
+      "Epoch [180/100], Loss: 0.5324\n",
+      "Epoch [200/100], Loss: 0.5177\n",
+      "Epoch [220/100], Loss: 0.5030\n",
+      "Epoch [240/100], Loss: 0.4883\n",
+      "Epoch [260/100], Loss: 0.4737\n",
+      "Epoch [280/100], Loss: 0.4592\n",
+      "Epoch [300/100], Loss: 0.4449\n",
+      "Epoch [320/100], Loss: 0.4308\n",
+      "Epoch [340/100], Loss: 0.4170\n",
+      "Epoch [360/100], Loss: 0.4035\n",
+      "Epoch [380/100], Loss: 0.3903\n",
+      "Epoch [400/100], Loss: 0.3777\n",
+      "Epoch [420/100], Loss: 0.3656\n",
+      "Epoch [440/100], Loss: 0.3540\n",
+      "Epoch [460/100], Loss: 0.3428\n",
+      "Epoch [480/100], Loss: 0.3319\n",
+      "Epoch [500/100], Loss: 0.3215\n",
+      "Epoch [520/100], Loss: 0.3116\n",
+      "Epoch [540/100], Loss: 0.3021\n",
+      "Epoch [560/100], Loss: 0.2930\n",
+      "Epoch [580/100], Loss: 0.2843\n",
+      "Epoch [600/100], Loss: 0.2760\n",
+      "Epoch [620/100], Loss: 0.2681\n",
+      "Epoch [640/100], Loss: 0.2606\n",
+      "Epoch [660/100], Loss: 0.2535\n",
+      "Epoch [680/100], Loss: 0.2467\n",
+      "Epoch [700/100], Loss: 0.2403\n",
+      "Epoch [720/100], Loss: 0.2342\n",
+      "Epoch [740/100], Loss: 0.2285\n",
+      "Epoch [760/100], Loss: 0.2230\n",
+      "Epoch [780/100], Loss: 0.2178\n",
+      "Epoch [800/100], Loss: 0.2129\n",
+      "Epoch [820/100], Loss: 0.2081\n",
+      "Epoch [840/100], Loss: 0.2036\n",
+      "Epoch [860/100], Loss: 0.1993\n",
+      "Epoch [880/100], Loss: 0.1952\n",
+      "Epoch [900/100], Loss: 0.1912\n",
+      "Epoch [920/100], Loss: 0.1875\n",
+      "Epoch [940/100], Loss: 0.1839\n",
+      "Epoch [960/100], Loss: 0.1804\n",
+      "Epoch [980/100], Loss: 0.1772\n",
+      "Epoch [1000/100], Loss: 0.1740\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Training the Model ....\")\n",
+    "\n",
+    "for epoch in range(1000):\n",
+    "  outputs = model(X_tensor)\n",
+    "  loss = criterion(outputs, y_tensor)\n",
+    "  \n",
+    "  # backward pass and optimization \n",
+    "  optimizer.zero_grad()\n",
+    "  loss.backward()\n",
+    "  optimizer.step()\n",
+    "  \n",
+    "  \n",
+    "  if (epoch + 1) % 20 == 0:\n",
+    "    print(f'Epoch [{epoch + 1}/100], Loss: {loss.item():.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Available device: cpu\n"
+     ]
+    }
+   ],
+   "source": [
+    "# GPU Support if available\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else 'cpu')\n",
+    "\n",
+    "print(f\"Available device: {device}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model moved to:  cpu\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.to(device)\n",
+    "print(\"Model moved to: \", next(model.parameters()).device)"
    ]
   },
   {
