--- a/fundamentals/pytorch_basics/01_tensors_and_autograd.ipynb
+++ b/fundamentals/pytorch_basics/01_tensors_and_autograd.ipynb
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,10 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "model = SimpleNN()\n",
+    "print(model)"
+   ]
   },
   {
    "cell_type": "markdown",
