--- a/1_Core_AI/Deep_Learning_Basics/PyTorch_Tutorials/Beginner_Guides/02_NN_basic_classification.ipynb
+++ b/1_Core_AI/Deep_Learning_Basics/PyTorch_Tutorials/Beginner_Guides/02_NN_basic_classification.ipynb
@@ -281,7 +281,6 @@
     }
    ],
    "source": [
-    "\n",
     "import time\n",
     "\n",
     "# Initialize lists to store metrics\n",
@@ -773,7 +772,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ai_learning",
    "language": "python",
    "name": "python3"
   },
